[package]
authors = ["Syfaro <syfaro@huefox.com>"]
name = "zpl-printer"
version = "0.3.0"
edition = "2024"
publish = false

[package.metadata.release]
sign-tag = true

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.68"
axum = "0.6.18"
axum-prometheus = "0.3.3"
base64 = "0.21.2"
clap = { version = "4.3.11", features = ["derive", "env"] }
dithord = "0.4.1"
eyre = "0.6.8"
hex = "0.4.3"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
ipp = { version = "5.2.0", default-features = false, features = ["async-client-rustls"] }
itertools = "0.11.0"
lru = "0.10.0"
metrics = "0.21.0"
nom = "8.0.0"
reqwest = { version = "=0.11.17", default-features = false, features = ["rustls-tls"] }
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.100"
serde_with = "3.0.0"
sha2 = "0.10.7"
tap = "1.0.1"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.0", features = ["v7", "serde"] }

migration = { path = "migration" }

[workspace]
members = [".", "migration"]
