[package]
authors = ["Syfaro <syfaro@huefox.com>"]
name = "zpl-printer"
version = "0.6.0"
edition = "2024"
publish = false

[package.metadata.release]
sign-tag = true

[dependencies]
askama = { version = "0.14.0" }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["multipart"] }
axum-prometheus = "0.3.3"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.40", features = ["derive", "env"] }
crc16 = "0.4.0"
dithord = "0.4.1"
eyre = "0.6.8"
flate2 = "1.1.2"
hex = "0.4.3"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
ipp = { version = "5.3.0", default-features = false, features = ["async-client-rustls"] }
itertools = "0.14.0"
lru = "0.14.0"
metrics = "0.21.0"
nom = "8.0.0"
regex = { version = "1.11.1", default-features = false }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "json"] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.30.0"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.100"
serde_plain = "1.0.2"
serde_with = "3.13.0"
sha2 = "0.10.7"
tap = "1.0.1"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.15", default-features = false }
tower-http = { version = "0.4.1", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.0", features = ["v7", "serde"] }

migration = { path = "migration" }

[workspace]
members = [".", "migration"]
