[package]
authors = ["Syfaro <syfaro@huefox.com>"]
name = "zpl-printer"
version = "0.7.0"
edition = "2024"
publish = false

[package.metadata.release]
sign-tag = true

[workspace]
members = [".", "migration"]

[dependencies]
age = "0.11.2"
askama = { version = "0.15.4" }
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.40", features = ["derive", "env"] }
crc16 = "0.4.0"
dithord = "0.4.1"
eyre = "0.6.8"
flate2 = "1.1.2"
futures-util = "0.3.31"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false, features = [
    "bmp",
    "jpeg",
    "png",
    "webp",
] }
ipp = { version = "5.3.0", default-features = false, features = [
    "async-client-rustls",
] }
itertools = "0.14.0"
lazy_static = "1.5.0"
lru = "0.16.3"
memchr = "2.8.0"
migration = { path = "migration" }
nom = "8.0.0"
pem = "3.0.6"
rand = "0.9.2"
rcgen = { version = "0.14.7", features = ["aws_lc_rs", "x509-parser"] }
regex = { version = "1.11.1", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls",
    "system-proxy",
] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.30.0"
rustls = "0.23.36"
sea-orm = { version = "1.1.12", features = [
    "debug-print",
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.100"
serde_plain = "1.0.2"
serde_with = "3.13.0"
sha2 = "0.10.7"
simdutf8 = "0.1.5"
tap = "1.0.1"
tar = "0.4.44"
tera = "1.19.0"
time = "0.3.47"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-rustls = "0.26.4"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["rt"] }
tower = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.0", features = ["v7", "serde"] }
x509-parser = { version = "0.18.1", features = ["aws-lc-rs"] }
